Addition of container, changed font sizes, added padding

--- a/WeatherApp/WeatherApp.html
+++ b/WeatherApp/WeatherApp.html
@@ -16,11 +16,12 @@
       <h1 id="title">Free C<i class="fa fa-sun-o" aria-hidden="true"></i>de Camp<div>Weather App</div></h1>
     </header>
     <main id="main">
-      <h2>Temperature For</h2>
-      <div id="city"></div>
-      <div id="temperature"></div>
-      <div id="description"></div>
-      <img id="icon" src="" alt="weather icon" />
+      <div class="container">
+        <div id="city"></div>
+        <div id="temperature"></div>
+        <div id="description"></div>
+        <img id="icon" src="" alt="weather icon" />
+      </div>
     </main>
   </div>
 </body>
