Addition of a conversion button that toggles from celscius to fahrenheit (can only convert one way)

--- a/WeatherApp/WeatherApp.html
+++ b/WeatherApp/WeatherApp.html
@@ -21,6 +21,9 @@
         <div id="temperature"></div>
         <div id="description"></div>
         <img id="icon" src="" alt="weather icon" />
+        <div class="submit">
+          <button id="fahrenheit" type="button" name="convert">Convert</button>
+        </div>
       </div>
     </main>
   </div>
