Added styles to button, functionality to button, for toggling between fahrenheit and celscius, and changing the display of the text between toggling

--- a/WeatherApp/WeatherApp.html
+++ b/WeatherApp/WeatherApp.html
@@ -22,7 +22,7 @@
         <div id="description"></div>
         <img id="icon" src="" alt="weather icon" />
         <div class="submit">
-          <button id="fahrenheit" type="button" name="convert">Convert</button>
+          <button id="convert" type="button" name="convert">Convert to &deg;F</button>
         </div>
       </div>
     </main>
