Addition of a search box

--- a/wikipediaviewer/wikiViewer.html
+++ b/wikipediaviewer/wikiViewer.html
@@ -21,6 +21,11 @@
         <main id="main">
           <p class="descriptions">Click to enter a topic of interest</p>
           <i class="fa fa-search" aria-hidden="true"></i>
+          <!-- Search box that appears on click. Hidden -->
+          <div id="search-box">
+            <label for="search" hidden="true">Search Box</label>
+            <input id="search" type="text" name="search" height="4em"></input>
+          </div>
         </main>
       </div>
 
