--- a/wikipediaviewer/wikiViewer.html
+++ b/wikipediaviewer/wikiViewer.html
@@ -8,8 +8,12 @@
     <link href="https://fonts.googleapis.com/css?family=Ubuntu:300" rel="stylesheet">
     <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" />
-    <link rel="stylesheet" type="text/css" href="wikiViewer.css" />
-    <script type="text/js" src="wikiViewer.js"></script>
+    <script
+  src="https://code.jquery.com/jquery-3.2.1.min.js"
+  integrity="sha256-hwg4gsxgFZhOsEEamdOYGBf13FyQuiTwlAQgxVSNgt4="
+  crossorigin="anonymous"></script>
+  <link rel="stylesheet" type="text/css" href="wikiViewer.css" />
+  <script type="text/javascript" src="wikiViewer.js"></script>
   </head>
 
   <body>
@@ -24,7 +28,7 @@
           <!-- Search box that appears on click. Hidden -->
           <div id="search-box">
             <label for="search" hidden="true">Search Box</label>
-            <input id="search" type="text" name="search" height="4em"></input>
+            <input id="search" class="hidden show" type="text" name="search" height="4em"></input>
           </div>
         </main>
       </div>
